// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders event container for left 1`] = `
<div>
  <div
    className="EventContainer-bigScreenBox-6 EventContainer-boxLeft-7"
  >
    <div
      className="animated"
      style={
        Object {
          "animationDuration": "1s",
          "visibility": "hidden",
        }
      }
    >
      <div
        className="MuiPaper-root-15 MuiPaper-shadow2-19 MuiPaper-rounded-16 EventContainer-paper-2 EventContainer-paperLeft-3"
      >
        <span
          className="EventContainer-arrow-10 EventContainer-arrowRight-11"
        />
      </div>
    </div>
    <span
      className="EventContainer-dot-9 EventContainer-dotRight-13"
    />
  </div>
  <div
    className="MuiPaper-root-15 MuiPaper-shadow2-19 MuiPaper-rounded-16 EventContainer-smallScreenBox-1"
  />
</div>
`;

exports[`renders event container for right 1`] = `
<div>
  <div
    className="EventContainer-bigScreenBox-6 EventContainer-boxRight-8"
  >
    <div
      className="animated"
      style={
        Object {
          "animationDuration": "1s",
          "visibility": "hidden",
        }
      }
    >
      <div
        className="MuiPaper-root-15 MuiPaper-shadow2-19 MuiPaper-rounded-16 EventContainer-paper-2 EventContainer-paperRight-4"
      >
        <span
          className="EventContainer-arrow-10 EventContainer-arrowLeft-12"
        />
      </div>
    </div>
    <span
      className="EventContainer-dot-9 EventContainer-dotLeft-14"
    />
  </div>
  <div
    className="MuiPaper-root-15 MuiPaper-shadow2-19 MuiPaper-rounded-16 EventContainer-smallScreenBox-1"
  />
</div>
`;
